Add Rails server command to Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -116,4 +116,6 @@ COPY --from=pre-builder /app/.git_sha /app/.git_sha
 
 WORKDIR /app
 
+CMD ["RAILS_ENV=production", "bundle", "exec", "rails", "server", "-b 0.0.0.0","-p 3000"]
+
 EXPOSE 3000
