fix: Update yarn install command to include --audit and --check files options

--- a/package.json
+++ b/package.json
@@ -152,8 +152,7 @@
   },
   "engines": {
     "node": "20.x",
-    "npm": ">=6.x",
-    "yarn": "3.x"
+    "npm": ">=6.x"
   },
   "husky": {
     "hooks": {
